# Spectrum-Access_System-Release-2

./: .gitignore  .gitmodules  README_SAS1.md  certlist.txt  requirements.txt
data/geo/: ned  nlcd
data/itu/: Climatic_zone_map_description.docx
src/conda-config/: README.md  SHA256SUMS  configure_conda_3.10.sh  environment.yml  requirements.txt  setup-conda-3.10.sh  uninstall-conda.sh
src/harness/: cert-check.sh  full_activity_dump_helper.py  run_single_test.py  sas_testcase.py  test_main.py  test_main_modified.py
src/harness/SAS-Test-Harness-Data/2023-06-14_16-53-57-067504/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-14_16-53-57-614528/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-15_11-41-08-727512/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-15_11-41-08-953801/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-15_12-44-14-619039/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-15_12-44-14-840784/: FAD.json  activity_dump_file_cbsd0.json
src/harness/SAS-Test-Harness-Data/2023-06-17_15-25-21-526120/: FAD.json  activity_dump_file_cbsd0.json
src/harness/certs/: admin.key  ca.cert  cbsd_ca.cert  device_a.cert  device_b.cert  device_b.key  device_blacklisted.key  device_c.key  device_cert_from_revoked_ca.cert  device_cert_from_revoked_ca.key  device_corrupted.cert  device_corrupted.key  device_d.cert  device_d.key  device_e.cert  device_e.key  device_expired.cert  device_expired.key  device_f.key  device_g.cert  device_g.key  device_h.cert  device_h.key  device_i.cert  device_i.key  device_inapplicable.cert  device_j.key  device_self_signed.cert  device_wrong_type.cert  domain_proxy.cert  domain_proxy_1.key  domain_proxy_blacklisted.key  domain_proxy_cert_from_revoked_ca.key  domain_proxy_corrupted.cert  domain_proxy_corrupted.key  domain_proxy_expired.key  domain_proxy_self_signed.cert  domain_proxy_wrong_type.cert  non_cbrs_root_ca.cert  non_cbrs_root_signed_cbsd_ca.cert  (+31 more)
src/harness/testcases/: WINNF_FT_S_MCP_testcase.py  WINNF_FT_S_PPR_testcase.py  WINNF_FT_S_REL2_RI_EAP_testcase.py  proto_test_cases.py  test_grant_objects.py  test_grant_processes.py  test_runner.py
src/harness/tools/: cert-check.sh
src/lib/antenna/: 3GHz_450bHG_SM_BH_INT_EL.csv  antenna.py  antenna_test.py  enhanced_antenna_test.py  sas2_antenna.py  simulated_data_el.csv  simulated_data_two_dimensional_gain.csv  test_antenna.py
src/lib/common/: cache.py  data.py  mpool.py  pyproject.toml
src/lib/common/sas2_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lib/dpa/: dpa_builder.py  dpa_mgr.py  dpa_mgr_example.py  dpa_mgr_test.py  move_list.py  move_list_example.py  move_list_test.py  pyproject.toml
src/lib/dpa/sas2_dpa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/geo/: README.md  county.py  drive.py  nlcd.py  pyproject.toml  refractivity.py  terrain.py  tiles.py  tropoclim.py  utils.py  zones.py
src/lib/geo/sas2_geo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/iap/: iap.py  iap_example.py  pyproject.toml
src/lib/iap/sas2_iap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/interference/: aggregate_interference.py  aggregate_interference_example.py  interference.py  pyproject.toml
src/lib/interference/sas2_interference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/interference/test/: aggregate_interference_test.py  interference_test.py
src/lib/ppa/: ppa.py  ppa_example.py  ppa_test.py  pyproject.toml
src/lib/ppa/sas2_ppa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/pre_iap_filtering/: fss_purge.py  pre_iap_filtering.py  pre_iap_util.py  pyproject.toml  zone_purge.py
src/lib/pre_iap_filtering/sas2_pre_iap_filtering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/pre_iap_filtering/test/: fss_purge_test.py  pre_iap_filtering_test.py  zone_purge_test.py
src/lib/propagation/: pyproject.toml
src/lib/propagation/ehata/: ehata_test.py
src/lib/propagation/itm/: itm.py  itm_test.py
src/lib/propagation/sas2_propagation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/tools/: cata_max_height.py  entities.py  pyproject.toml  sim_utils.py  testutils.py
src/lib/tools/benchmark/: prof_agg_interf.py  prof_prop.py  time_prop.py
src/lib/tools/examples/: example_fss_interference.py
src/lib/tools/sas2_geo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/tools/studies/: dpa_margin_sim.py
src/reference_implementation/: annot_fake_sas.py  annot_security_testcase.py  annot_test_main.py  annot_util.py  debug_cb_output.txt  reference_sas.py  sas_types.py  sas_types_pydantic.py
src/reference_implementation/sas_object_schemas/: Air_Interface.schema.json  Available_Channel.schema.json  Cbsd_Category_Enum.schema.json  Cbsd_Info.schema.json  Channel_Type_Enum.schema.json  Cpi_Signature_Data.schema.json  Cpi_Signed_Data.schema.json  Deregistration_Request.schema.json  Deregistration_Response.schema.json  Frequency_Range.schema.json  Grant_Request.schema.json  Grant_Response.schema.json  Group_Param.schema.json  Group_Type_Enum.schema.json  Heartbeat_Request.schema.json  Heartbeat_Response.schema.json  Height_Type_Enum.schema.json  Indoor_Loss_GNSS_Meas_Report.schema.json  Indoor_Loss_Technology_Type_Enum.schema.json  Installation_Param.schema.json  Meas_Report_Type.schema.json  Operation_Param.schema.json  Operation_State_Enum.schema.json  Professional_Installer_Data.schema.json  Radio_Technology_Enum.schema.json  Rcvd_Power_Meas_Report.schema.json  Registration_Request.schema.json  Registration_Response.schema.json  Relinquishment_Request.schema.json  Relinquishment_Response.schema.json  Response.schema.json  Response_Code_Enum.schema.json  Spectrum_Inquiry_Request.schema.json  Spectrum_Inquiry_Response.schema.json
src/reference_implementation/testcases/: WINNF_FT_S_FDB_testcase.py
(+226 files in other folders)
