[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=["cache", "data", "mpool",]

[project]
name = "sas2_common"
version = "0.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["winnf", "WINNFORUM", "Spectrum Access System", "CBRS"]
dependencies = [
    "enum",
    "mpool",
    "multiprocessing",
    "numpy",
    "six",
    "time",
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
source ='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/tree/main/src/lib/common/'
bugtracker='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/issues/'

