[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=["CONFIG", "county", "drive", "nlcd", "refractivity", "terrain", "tiles", "tropoclim", "utils", "vincenty", "zones"]

[project]
name = "sas2_geo"
version = "0.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["winnf", "WINNFORUM", "Spectrum Access System", "CBRS"]
dependencies = [
    "six",
    "pykml",
    "json",
    "logging",
    "math",
    "numpy",
    "os",
    "re",
    "shapely",
    "six",
    "sys",
    "threading",
    "time",
    "zipfile",
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
source ='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/tree/main/src/lib/geo/'
bugtracker='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/issues/'

