[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=["ppa_example", "ppa_test", "ppa",]

[project]
name = "sas2_ppa"
version = "0.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["winnf", "WINNFORUM", "Spectrum Access System", "CBRS"]
dependencies = [
    "json",
    "logging",
    "numpy",
    "os",
    "shapely.geometry",
    "unittest",
    "util2",
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
source ='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/tree/main/src/lib/ppa/'
bugtracker='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/issues/'
