[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=["fss_purge", "inter_sas_duplicate_grant", "pre_iap_filtering", "pre_iap_util", "zone_purge",]

[project]
name = "sas2_pre_iap_filtering"
version = "0.0.1"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["winnf", "WINNFORUM", "Spectrum Access System", "CBRS"]
dependencies = [
    "numpy",
    "shapely",
    "util2",
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
source ='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/tree/main/src/lib/pre_iap_filtering/'
bugtracker='https://github.com/Wireless-Innovation-Forum/Spectrum-Access_System-Release-2/issues/'

